--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 EMAIL_USER=devandrew66@gmail.com
 EMAIL_PASS=elgrjtujcpfnsnnj
+PORT=8000
+MONGODB_URI=mongodb://localhost:27017/Tiffi
+BASE_URL=http://localhost:8000
+CORS_ORIGIN=http://localhost:8000
