--- a/package.json
+++ b/package.json
@@ -16,11 +16,22 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "winston": "^3.17.0",
-    "winston-mongodb": "^6.0.0"
+    "winston-mongodb": "^6.0.0",
+     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "config": "^3.3.12",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.10.0",
+    "joi-password-complexity": "^5.2.0",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
+    "xss": "^1.0.15"
+
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
