--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Interios By Tiffi",
+  "name": "interiors-by-tiffi",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwindcss -i ./src/input.css -o ./public/output.css --minify"
+    "build:css": "tailwindcss -i ./src/input.css -o ./public/output.css --minify",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
