--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
+    "swiper": "^11.2.0",
     "winston": "^3.17.0",
     "winston-mongodb": "^6.0.0",
     "xss": "^1.0.15"
